[tool.poetry]
name = "things3-timeboxer"
version = "0.0.1"
description = "Timeboxing for Things 3, all in your menu bar. (macOS)"
authors = ["Brandon Young <maintain@brandonyoung.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
rumps = "^0.4.0"
things-py = "^0.0.15"
paramiko = "^3.3.1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
